Implemented scene change on MenuItem click, and re-did all the scenes